--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/First Web GL Build.loader.js";
       var config = {
-        dataUrl: buildUrl + "/First Web GL Build.data.br",
-        frameworkUrl: buildUrl + "/First Web GL Build.framework.js.br",
-        codeUrl: buildUrl + "/First Web GL Build.wasm.br",
+        dataUrl: buildUrl + "/First Web GL Build.data.gz",
+        frameworkUrl: buildUrl + "/First Web GL Build.framework.js.gz",
+        codeUrl: buildUrl + "/First Web GL Build.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Navajo Wars",
