--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=1920 height=1080></canvas>
+      <canvas id="unity-canvas" width=1 height=1></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/First Web GL Build.loader.js";
       var config = {
-        dataUrl: buildUrl + "/First Web GL Build.data.gz",
-        frameworkUrl: buildUrl + "/First Web GL Build.framework.js.gz",
-        codeUrl: buildUrl + "/First Web GL Build.wasm.gz",
+        dataUrl: buildUrl + "/First Web GL Build.data.unityweb",
+        frameworkUrl: buildUrl + "/First Web GL Build.framework.js.unityweb",
+        codeUrl: buildUrl + "/First Web GL Build.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Navajo Wars",
@@ -93,8 +93,8 @@
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
 
-        canvas.style.width = "1920px";
-        canvas.style.height = "1080px";
+        canvas.style.width = "1px";
+        canvas.style.height = "1px";
       }
 
       loadingBar.style.display = "block";
